fixed footer spacing issue

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-body {margin:0px;}
+
+html, body {margin:0px;}
 .box {
 display: block;
 float: left;
@@ -136,7 +137,7 @@ height:400px;}
 width: 264px;
 font-family: sans-serif;
 float: left;
-height: 400px;
+height: 350px;
 margin: 18px;
 font-size: 13px;
 color: #ccc;
